2006-08-24  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.6.2

	* modules/pam_lastlog/pam_lastlog.c (last_login_date): Create
	lastlog file if it does not exist.

	* modules/pam_cracklib/pam_cracklib.c (pam_sm_chauthtok): Check
	for error from getting second token.
	* xtests/Makefile.am: Add tst-pam_cracklib1
	* xtests/tst-pam_cracklib1.c: New, check for pam_cracklib seg.fault.
	* xtests/tst-pam_cracklib1.pamd: New, config for cracklib test.

2006-08-24  Thorsten Kukuk  <kukuk@thkukuk.de>

	* xtests/tst-pam_dispatch4.c: New test.
	* xtests/tst-pam_dispatch4.pamd: PAM config for new test.

2006-08-09  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.6.1

2006-08-09  David Howells  <dhowells@redhat.com>

	* modules/pam_keyinit/pam_keyinit.c (kill_keyrings): Set real uid
	to user's before revoking.
	(pam_sm_open_session): Remember the uid.

2006-08-06  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_umask/pam_umask.c (setup_limits_from_gecos):
	Add error handling.
	* modules/pam_umask/pam_umask.8.xml: Document silent option.

	* xtests/Makefile.am: Fix includes for bootstrapping.
	Reported by Greg Schafer <gschafer@zip.com.au>.

2006-08-05  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.6.0

	* modules/pam_limits/pam_limits.c (pam_sm_open_session): Use
	pam_modutil_getpwnam instead of getpwnam.

	* modules/pam_succeed_if/pam_succeed_if.c (evaluate): Cast
	svc variable to char pointer for snprintf.

	* configure.in: Generate xtests/Makefile.
	* Makefile.am (SUBDIRS): Add xtests.
	* README: Document make check and make xtests.
	* xtests/Makefile.am: New.
	* xtests/tst-pam_dispatch1.pamd: New.
	* xtests/tst-pam_dispatch2.pamd: New.
	* xtests/tst-pam_dispatch3.pamd: New.
	* xtests/tst-pam_dispatch1.c: New.
	* xtests/tst-pam_dispatch2.c: New.
	* xtests/tst-pam_dispatch3.c: New.

2006-08-04 Ray Strode  <rstrode@redhat.com>

	* modules/pam_succeed_if/pam_succeed_if.c (pam_sm_authenticate):